[package]
name = "rustpad-server"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytecount = "0.6.9"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.29"
operational-transform = { version = "0.6.1", features = ["serde"] }
parking_lot = "0.12.5"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tokio-stream = "0.1.17"
uuid = { version = "1.19.0", features = ["serde"] }
warp = { version = "0.4.2", features = ["server", "test", "websocket"] }

[dev-dependencies]
tempfile = "3.23.0"
