[package]
name = "rustpad-wasm"
version = "0.1.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytecount = "0.6.9"
console_error_panic_hook = { version = "0.1.7", optional = true }
operational-transform = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
